@@ -1,0 +1,189 @@
+<?xml version="1.0"?>
+<!--
+   Copyright (C) 2010  Stanislav Sinyagin
+
+   This program is free software; you can redistribute it and/or modify
+   it under the terms of the GNU General Public License as published by
+   the Free Software Foundation; either version 2 of the License, or
+   (at your option) any later version.
+
+   This program is distributed in the hope that it will be useful,
+   but WITHOUT ANY WARRANTY; without even the implied warranty of
+   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+   GNU General Public License for more details.
+
+   You should have received a copy of the GNU General Public License
+   along with this program; if not, write to the Free Software
+   Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.
+
+  $Id: cisco.ios.docsis.xml 242 2005-06-21 12:17:22Z ssinyagin $
+  Stanislav Sinyagin <ssinyagin@yahoo.com>
+
+ DOCSIS interface, CASA Systems specific
+  
+-->
+
+<configuration>
+
+<definitions>
+  <!--  CASA-DOCS-EXT-MIB::casaCmtsMacExtTable -->
+  <def name="casaCmtsCmTotal"      value="1.3.6.1.4.1.20858.10.22.2.2.1.4"/>
+  <def name="casaCmtsCmActive"     value="1.3.6.1.4.1.20858.10.22.2.2.1.5"/>
+  <def name="casaCmtsCmRegistered" value="1.3.6.1.4.1.20858.10.22.2.2.1.6"/>
+  
+  <!--  CASA-CABLE-CMCPE-MIB::casaCmtsUSModemTable -->
+  <def name="casaCmtsUSActiveModemCount"
+        value="1.3.6.1.4.1.20858.10.12.1.1.1.1"/>
+  <def name="casaCmtsUSRegisteredModemCount"
+        value="1.3.6.1.4.1.20858.10.12.1.1.1.2"/>
+  <def name="casaCmtsUSTotalModemCount"
+        value="1.3.6.1.4.1.20858.10.12.1.1.1.3"/>
+
+  <!--  CASA-CABLE-CMCPE-MIB::casaCmtsDSModemTable -->
+  <def name="casaCmtsDSActiveModemCount"
+        value="1.3.6.1.4.1.20858.10.12.1.2.1.1"/>
+  <def name="casaCmtsDSRegisteredModemCount"
+        value="1.3.6.1.4.1.20858.10.12.1.2.1.2"/>
+  <def name="casaCmtsDSTotalModemCount"
+        value="1.3.6.1.4.1.20858.10.12.1.2.1.3"/>
+  
+        
+</definitions>
+
+<datasources>
+
+  <template name="casa-docsis-mac-subtree">
+    <param name="precedence"           value="-500" />
+    <param name="comment"        value="DOCSIS MAC layer utilization" />
+    <param name="data-file">
+       %system-id%_%interface-nick%_casa_mac.rrd
+    </param>
+    <param name="collector-timeoffset-hashstring"
+                                       value="%system-id%:%interface-nick%" />
+    <param name="descriptive-nickname" value="%system-id%:%interface-name%"/>
+    <param name="graph-title"          value="%descriptive-nickname%" />
+
+    <param name="has-overview-shortcuts" value="yes"/>
+    <param name="overview-shortcuts" value="modems"/>
+    <param name="overview-subleave-name-modems" value="Modems"/>
+    <param name="overview-direct-link-modems"      value="yes"/>
+    <param name="overview-direct-link-view-modems" value="expanded-dir-html"/>
+    <param name="overview-shortcut-text-modems"
+           value="All modems"/>
+    <param name="overview-shortcut-title-modems"
+           value="Show modem quantities in one page"/>
+    <param name="overview-page-title-modems"
+           value="Modem quantities"/>
+           
+    <param name="rrd-hwpredict"     value="disabled" />
+  </template>
+
+  <template name="casa-docsis-modem-quantity">
+    <leaf name="Modems">
+      <param name="ds-type"           value="rrd-multigraph" />
+      <param name="ds-names"          value="total,active,registered" />
+      <param name="graph-lower-limit" value="0" />
+      <param name="precedence"        value="950" />
+      <param name="comment"
+              value="Active and Total modems on the interface" />
+      <param name="vertical-label"    value="Modems" />
+
+      <param name="ds-expr-total">{Modems_Total}</param>
+      <param name="graph-legend-total"  value="Total" />
+      <param name="line-style-total"      value="##totalresource" />
+      <param name="line-color-total"      value="##totalresource" />
+      <param name="line-order-total"      value="1" />
+
+      <param name="ds-expr-active">{Modems_Active}</param>
+      <param name="graph-legend-active"  value="Active" />
+      <param name="line-style-active"    value="##resourcepartusage" />
+      <param name="line-color-active"    value="##resourcepartusage" />
+      <param name="line-order-active"    value="2" />
+      
+      <param name="ds-expr-registered">{Modems_Registered}</param>
+      <param name="graph-legend-registered"  value="Registered" />
+      <param name="line-style-registered"    value="##resourceusage" />
+      <param name="line-color-registered"    value="##resourceusage" />
+      <param name="line-order-registered"    value="3" />
+    </leaf>
+
+    <leaf name="Modems_Total">
+      <param name="snmp-object"
+                value="%casa-docsis-cmtotal%.%ifindex-map%"/>
+      <param name="rrd-ds"       value="Total" />
+      <param name="hidden"       value="yes"/>
+      <param name="comment"
+          value="Total number of modems on the interface since boot"/>
+      <param name="graph-legend" value="Total modems" />
+      <param name="precedence"   value="900" />
+      <param name="rrd-create-dstype"   value="GAUGE" />
+      <param name="vertical-label"      value="Modems" />
+      <param name="graph-lower-limit"   value="0" />
+    </leaf>
+    
+    <leaf name="Modems_Active">
+      <param name="snmp-object"
+                value="%casa-docsis-cmactive%.%ifindex-map%"/>
+      <param name="rrd-ds"       value="Active" />
+      <param name="hidden"       value="yes"/>
+      <param name="comment"
+          value="Number of active modems on the interface"/>
+      <param name="graph-legend" value="Active modems" />
+      <param name="precedence"   value="800" />
+      <param name="rrd-create-dstype"   value="GAUGE" />
+      <param name="vertical-label"      value="Modems" />
+      <param name="graph-lower-limit"   value="0" />
+      <param name="monitor-action-target"  value="Modems"/>
+    </leaf>
+    
+    <leaf name="Modems_Registered">
+      <param name="snmp-object"
+                value="%casa-docsis-cmregistered%.%ifindex-map%"/>
+      <param name="rrd-ds"       value="Registered" />
+      <param name="hidden"       value="yes"/>
+      <param name="comment"
+          value="Number of registered modems on the interface"/>
+      <param name="graph-legend" value="Registered modems" />
+      <param name="precedence"   value="700" />
+      <param name="rrd-create-dstype"   value="GAUGE" />
+      <param name="vertical-label"      value="Modems" />
+      <param name="graph-lower-limit"   value="0" />
+      <param name="monitor-action-target"  value="Modems"/>
+    </leaf>
+
+  </template>
+
+  
+  <template name="casa-docsis-mac-util">
+    <apply-template name="casa-docsis-modem-quantity"/>
+    <param name="casa-docsis-cmtotal" value="$casaCmtsCmTotal"/>
+    <param name="casa-docsis-cmactive" value="$casaCmtsCmActive"/>
+    <param name="casa-docsis-cmregistered" value="$casaCmtsCmRegistered"/>
+  </template>
+
+  
+  <template name="casa-docsis-upstream-util">
+    <apply-template name="casa-docsis-modem-quantity"/>
+    <param name="casa-docsis-cmtotal"
+             value="$casaCmtsUSTotalModemCount"/>
+    <param name="casa-docsis-cmactive"
+             value="$casaCmtsUSActiveModemCount"/>
+    <param name="casa-docsis-cmregistered"
+             value="$casaCmtsUSRegisteredModemCount"/>
+  </template>
+
+  <template name="casa-docsis-downstream-util">
+    <apply-template name="casa-docsis-modem-quantity"/>
+    <param name="casa-docsis-cmtotal"
+             value="$casaCmtsDSTotalModemCount"/>
+    <param name="casa-docsis-cmactive"
+             value="$casaCmtsDSActiveModemCount"/>
+    <param name="casa-docsis-cmregistered"
+             value="$casaCmtsDSRegisteredModemCount"/>
+  </template>
+
+    
+</datasources>
+
+
+</configuration>
